# sibsutis

./: .gitignore  .gitmodules  README.md
2semestr/proga/lab 1/: 1.cpp
2semestr/proga/lab 10/: main.c
2semestr/proga/lab 12/: main.c
2semestr/proga/lab 2/: 1.c  2.c  3.c
2semestr/proga/lab 3/: 1.c  2.cpp
2semestr/proga/lab 5/: test.c
2semestr/proga/lab 6/: test.c
2semestr/proga/lab 7/: 1.c  2.c  test.c
2semestr/proga/lab 8/: test.c
2semestr/proga/lab 9/: 1.c  1232.c  2.c
2semestr/trpo/: .gitmodules  CMakeLists.txt  Makefile  quiz
2semestr/trpo/app/game/: quiz.cpp  quiz.hpp
3semestr/el tex/: 5.docx  6.docx  7.docx  9.docx
3semestr/inet/: budget.json  package-lock.json  package.json  script.js  server.js
3semestr/inet/public/: font.css  index.html  script.js
3semestr/kurs/: 123.cpp  asdasd.cpp  func.h  kodir.h  menu.h  records.h
3semestr/oop/: 2.1.cpp  2.2.cpp  2.cpp  7.cpp
4semestr/vish_mat/: 2.cpp  3.1.cpp  4.cpp  lab1.cpp
4semestr/viz_prog/: index.html  package-lock.json  style.css
proga/lab 1/: 2.cpp  3.cpp
proga/lab 10/: input.txt
proga/lab 11/: main.c
proga/lab 12/: sort.c  sort.h
proga/lab 3/: 3.c
proga/lab 4/: 1.cpp  2.c  213.c
proga/lab 5/: 1.c  2.c
proga/lab 6/: 2.c
proga/lab 7/: 3.c
proga/lab 8/: 1.c  2.c
proga/lab 9/: 3.c
siaod/: queue.c  queue.h  sort.c  spiski.c  stack.c  stack.h
trpo/: .gitlab-ci.yml  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  quiz  quiz.html  serv.cpp  test  test_executable
trpo/app/game/: quiz.cpp  quiz.hpp
trpo/app/test/: test.cpp
(+83 files in other folders)
